components/ingress-rules/overlays/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
#  tls:
#    - hosts:
#        - reduce.isis.cclrc.ac.uk
#      secretName: reduce-isis-tls
  rules:
  - http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: fia-api-service
            port:
              number: 80
      - path: /f-i-a/?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: scigateway-service
            port:
              number: 80
